name:                weigh
version:             0.0.0
synopsis:            Measures the memory usage of a Haskell value or function
description:         Please see README.md
homepage:            https://github.com/fpco/weigh#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
copyright:           FP Complete
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Weigh
  build-depends:       base >= 4.7 && < 5
                     , process
                     , deepseq
                     , mtl
                     , split
                     , ghc-heap-view
  default-language:    Haskell2010

test-suite weigh-test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/test
  ghc-options: -O2
  main-is: Main.hs
  build-depends: base
               , weigh
               , deepseq
