name:                weigh
version:             0.0.18
synopsis:            Measure allocations of a Haskell functions/values
description:         Please see README.md
homepage:            https://github.com/fpco/weigh#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
copyright:           FP Complete
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Weigh
  other-modules:       Weigh.GHCStats
  build-depends:       base >= 4.7 && < 5
                     , process
                     , deepseq
                     , mtl
                     , split
                     , temporary
                     , criterion-measurement
  default-language:    Haskell2010
  if impl(ghc < 8.2.1)
    buildable: false

test-suite weigh-test
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: src/test
  ghc-options: -O2 -Wall
  main-is: Main.hs
  build-depends: base
               , weigh
               , deepseq
